# lab

./: .gitignore  1122.py  README.md  lase_sence2.py  laser_sense.py  tttt.txt  tttt2.txt  tttt3.txt
logs/: CMakeLists.txt  main.cpp
others/: CMakeLists.txt  main.cc
test_atan2/: CMakeLists.txt  main.cc
test_class_in_class/: CMakeLists.txt  a.h  main.cc
test_cpp_template/: .gitignore  CMakeLists.txt
test_cpp_template/src/: check_member.cc  multi_template.cc
test_cuda/: CMakeLists.txt  ReadMe.md  main.cc  print_in_kernel.cu  recursive.cu  search1.cu  simple.cu  simple2.cu
test_eigen/: CMakeLists.txt
test_eigen/src/: about_array.cc  fast.cc  fast.md
test_lua/: CMakeLists.txt  ReadMe.md  main.cpp
test_opencv_3d/: CMakeLists.txt  main.cpp
test_pcl/: my_scene_downsampled.pcd  my_scene_plane_0.pcd  my_scene_plane_1.pcd
test_pcl/data/: my_scene.pcd
test_pcl/extract_indices/: CMakeLists.txt  extract_indices.cpp  extract_indices2.cpp
test_pcl/registration/: CMakeLists.txt  icp.cc
test_python3/: test_subprocess.py
test_python_argparse/: test_argparse.py
test_scope/: CMakeLists.txt  main.cc  main1.cc  main2.cc
test_stream/: CMakeLists.txt  fstream.cc
test_thread/: CMakeLists.txt
test_thread/src/: multi_threads.cc
test_thrust/: ReadMe.md  mytest.cu  transform1.cu  transform2.cu
vscode-clangd/: CMakeLists.txt  main.cc
